--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "Backend for a joke generator",
   "dependencies": {
     "express": "^4.21.2",
+    "mongodb": "^6.12.0",
     "nodemon": "^3.1.9"
   }
 }
