--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "description": "Backend for a joke generator",
   "dependencies": {
     "express": "^4.21.2",
-    "mongodb": "^6.12.0",
+    "mongodb": "^6.12.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
